--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,7 +2,12 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# System deps for common python wheels
+# Needed for `pip install "pkg @ git+https://..."`
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends git ca-certificates \
+  && rm -rf /var/lib/apt/lists/*
+
+# Python deps
 RUN pip install --no-cache-dir --upgrade pip
 
 COPY pyproject.toml /app/pyproject.toml
